--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -30,24 +30,61 @@ header {
     font-size: 4rem;
     font-weight: 700;
   }
-  ul {
-    display: flex;
-    li {
-      .header-nav {
-        font-size: 1.8rem;
-        padding: 0 10px;
+  .header-menu {
+    position: relative;
+    ul {
+      display: flex;
+      @include xs {
+        display: none;
       }
-      .active {
-        font-weight: 700;
-        text-decoration: underline;
+      li {
+        .header-nav {
+          font-size: 1.8rem;
+          padding: 0 10px;
+        }
+        .active {
+          font-weight: 700;
+          text-decoration: underline;
+        }
       }
+    }
+    .header-menu-icon {
+      display: none;
+      font-size: 3rem;
+      color: white;
+      @include xs {
+        display: block;
+      }
+    }
+    .mobile-menu {
+      display: none;
+      position: absolute;
+      box-shadow: var(--box-shadow);
+      top: 9.5rem;
+      right: 1rem;
+      padding: 3rem 1.5rem;
+      width: 20rem;
+      background: white;
+      ul {
+        display: block;
+        li {
+          margin: 2rem 0;
+          a {
+            color: var(--text);
+          }
+        }
+      }
+    }
+    .mobile-menu.open {
+      display: block;
     }
   }
 }
 
 .content {
   grid-area: content;
-  padding: 20px;
+  padding: 2rem;
+  background: var(--divider);
 }
 
 footer {
